# astrof

./: .gitignore  BLOG.md  EXPLAINER.md  POST_TRAINING_STRATEGY.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  train_astrof.ipynb  train_astrof_test.ipynb
data/: replay_buffer.jsonl
outputs/: benchmark_greedy.json  benchmark_random.json  benchmark_zeroshot.json
scripts/: benchmark.py  continual_learner.py  generate_sft_data.py  novelty_detector.py  smoke_test.py  test_graders.py  train_grpo.py  train_grpo_mac.py
server/: app.py  environment.py  sites.py
